--- a/Views/Home/ViewSchedule.cshtml
+++ b/Views/Home/ViewSchedule.cshtml
@@ -159,7 +159,7 @@
     <a class="btn btn-primary"
        asp-controller="Home"
        asp-action="LocationsAndActivities"
-       asp-route-id="@schedule.Schedule_Id">
+       asp-route-scheduleId="@schedule.Schedule_Id">
         Edit Schedule
     </a>
 </div>
