--- a/Views/Home/Residence.cshtml
+++ b/Views/Home/Residence.cshtml
@@ -186,7 +186,7 @@
     </style>
 </head>
 <body>
-    `<div class="container mt-4">
+    <div class="container mt-4">
 
         @await Html.PartialAsync("_ProgressFlowChart")
         <input type="hidden" id="scheduleId" value="@scheduleId" />
